force-app/main/default/objects/leaseworks__Floating_Rent_Inputs__c/leaseworks__Floating_Rent_Inputs__c.object-meta.xml
<CustomObject>
    <description>Parameters that are used to calculate Income Schedule</description>
    <label>Z_Unused_2012 Floating Rent Inputs</label>
    <nameField>
        <label>Z_Unused_2012 Adjustment Period</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_Unused_2012 Floating Rent Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>