force-app/main/default/objects/leaseworks__Floating_Rent_Inputs__c/fields/leaseworks__Adjustment_Factor__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Adjustment_Factor__c</fullName>
    <inlineHelpText>Adjustment Factor, if specified in the Lease Agreement. If not required, leave blank.</inlineHelpText>
    <label>Z_Unused_2012 Adjustment Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>