force-app/main/default/objects/leaseworks__Floating_Rent_Inputs__c/fields/leaseworks__LIBOR_Base__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__LIBOR_Base__c</fullName>
    <inlineHelpText>Select the LIBOR Base as stated in the Lease Agreement.</inlineHelpText>
    <label>Z_Unused_2012 LIBOR Base</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Week</fullName>
            </value>
            <value>
                <fullName>1 Months</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>1 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>