force-app/main/default/objects/leaseworks__Floating_Rent_Inputs__c/fields/leaseworks__Manufacturer_Escalation_Factor__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Manufacturer_Escalation_Factor__c</fullName>
    <inlineHelpText>Manufacturer Escalation Factor, if specified in the Lease Agreement. If not required, leave blank.</inlineHelpText>
    <label>Z_Unused_2012 Manufacturer Esc Factor</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>