force-app/main/default/objects/leaseworks__Floating_Rent_Inputs__c/fields/leaseworks__Y_Hidden_Rent_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Rent_Start_Date__c</fullName>
    <formula>Null /*Lease__r.Rent_Date__c*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2012 Rent Start Date</label>
    <type>Date</type>
</CustomField>